// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component Renders correctly 1`] = `
<header
  className="header is-flex level"
>
  <span
    className="sp sp-menu"
  />
  <SunPowerImage />
</header>
`;

exports[`Header Component Renders text instead of logo 1`] = `
<header
  className="header is-flex level"
>
  <span
    className="sp sp-menu"
  />
  <span
    className="text has-text-white"
    title="ADDRESS"
  >
    ADDRESS
  </span>
</header>
`;
